change folder name, link first app

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </h5>
 
                 <div class="text-center">
-                    <a href="#" class="btn btn-outline-primary" target="_blank">Random Quote Machine</a> <br />
+                    <a href="./Random_Quote_Machine/index.html" class="btn btn-outline-primary" target="_blank">Random Quote Machine</a> <br />
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">Markdown Previewer</a> <br />
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">Drum Machine</a> <br />
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">JavaScript Calculator</a> <br />
