--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="./Random_Quote_Machine/" class="btn btn-outline-primary" target="_blank">Random Quote Machine</a> <br />
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">Markdown Previewer</a> <br />
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">Drum Machine</a> <br />
-                    <a href="#" class="btn btn-outline-primary disabled" target="_blank">JavaScript Calculator</a> <br />
+                    <a href="./JavaScript_Calculator/" class="btn btn-outline-primary" target="_blank">JavaScript Calculator</a> <br />
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">Pomodoro Clock</a> <br />
 
                 </div>
