background color and shadow

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         width: 50vh !important;
         margin: 2px !important;
       }
+      .container-fluid{
+        background: #a8c0ff;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #3f2b96, #a8c0ff) !important;  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #3f2b96, #a8c0ff) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+      }
+
 
     </style>
   </head>
@@ -30,9 +37,9 @@
         <div class="col">
         </div>
         <div class="col-6 my-auto">
-          <div class="card mx-auto">
+          <div class="card mx-auto" style="box-shadow: 10px 7px 12px #50679a;">
             <div class="card-body">
-                <h5 class="card-title text-center text-uppercase font-weight-light badge-primary">Freecodecamp Front end Projects <br />
+                <h5 class="card-title text-center text-uppercase font-weight-light badge-primary" style="box-shadow: 0 7px 12px #50679a;">Freecodecamp Front end Projects <br />
                   of <a href="https://github.com/prokawsar" class="text-warning" target="_blank" style="text-decoration: none;">prokawsar</a>
                 </h5>
 
