pomodoro link updated

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">Markdown Previewer</a> <br />
                     <a href="#" class="btn btn-outline-primary disabled" target="_blank">Drum Machine</a> <br />
                     <a href="./JavaScript_Calculator/" class="btn btn-outline-primary" target="_blank">JavaScript Calculator</a> <br />
-                    <a href="#" class="btn btn-outline-primary disabled" target="_blank">Pomodoro Clock</a> <br />
+                    <a href="./Pomodoro_Clock/" class="btn btn-outline-primary" target="_blank">Pomodoro Clock</a> <br />
 
                 </div>
             </div>
